[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "porthole"
version = "0.1.0"
description = "Remote monitoring, broadcasting, and recon toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paramiko>=3.0",
    "rich>=13.0",
    "click>=8.0",
    "scp>=0.14",
]

[project.scripts]
porthole = "porthole.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["porthole*"]
