[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jms-porthole"
version = "0.1.0"
description = "JMS (Janus Monitoring Suite) — remote monitoring, broadcasting, and recon toolkit"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "paramiko>=3.0",
    "rich>=13.0",
    "click>=8.0",
    "scp>=0.14",
]

[project.scripts]
porthole = "porthole.cli:main"
jms = "porthole.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["porthole*"]
