[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jms-porthole"
version = "0.2.0"
description = "JMS (Janus Monitoring Suite) — remote monitoring, broadcasting, and recon toolkit"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["ssh", "vnc", "monitoring", "recon", "network", "security"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Monitoring",
    "Topic :: Security",
]
dependencies = [
    "paramiko>=3.0",
    "rich>=13.0",
    "click>=8.0",
    "scp>=0.14",
]

[project.scripts]
porthole = "porthole.cli:main"
jms = "porthole.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["porthole*"]
